.snakemake/log/2022-05-21T105932.563971.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/__init__.py", line 593, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1182, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
  File "/home/jeszyman/repos/atac-seq/workflow/tmp.smk", line 40
    				config [ "fq_src_dir" ] + "/" + lambda wcs : FQ_DICT [ wcs . fq_basename ] + "_R1.fastq.gz" ,
    				                                ^
SyntaxError: invalid syntax

SyntaxError in line 40 of /home/jeszyman/repos/atac-seq/workflow/tmp.smk:
invalid syntax (tmp.smk, line 40)
